@@ -1,5 +1,10 @@
 2002-09-18  Andrew Cagney  <ac131313@redhat.com>
 
+	* infrun.c (signal_stop_update): Convert definition to ISO C.
+	(signal_print_update): Ditto.
+	(signal_pass_update): Ditto.
+	* inflow.c (terminal_save_ours): Ditto.
+
 	* config/djgpp/fnchange.lst: Handle name clashes between
 	bfd/coff-tic30.c, bfd/coff-tic4x.c, bfd/coff-tic54x.c and
 	bfd/coff-tic80.c.
